--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,3 +12,5 @@ LazyData: true
 RoxygenNote: 7.2.3
 Imports: 
     magrittr
+URL: https://github.com/sebsilas/vampr
+BugReports: https://github.com/sebsilas/vampr/issues
