--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,14 @@
 Package: vampr
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Vamp Plugins wrapped in R.
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Authors@R: 
+    person(given = "Sebastian",
+           family = "Silas",
+           role = c("aut", "cre"),
+           email = "sebsilas@gmail.com",
+           comment = c(ORCID = "0000-0001-8140-6528"))
+Description: Vamp Plugins wrapped in R.
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
